Version 3.10 - ?

	gec:

	* Added option --gelint to force the whole content of classes to be
	  checked (even features not reachable from the root creation procedure).
	* Fixed bug in the generated C code for call agents whose feature was
	  FUNCTION.item or ROUTINE.call and whose closed argument was a manifest
	  tuple. See bug#2997112.

	geant:

	* Extended the attributes 'if' and 'unless' to accept the values
	  "true" and "false". This can be useful when automatically generating
	  geant build files. See bug#2657770.

	gexace:

	* Added option "syntax" to support the corresponding option in ECF.
	* Added documentation explaining how to add a new option in Xace.

	geyacc:

	* When specifying Eiffel types in the %token and %type clauses, in addition
	  to what was accepted so far, it is now possible to use 'like Current',
	  labeled tuples (e.g. 'TUPLE [i, j: INTEGER; s: STRING]') and type marks
	  such as 'expanded', 'reference', 'separate', 'attached', 'detachable',
	  '!' and '?'. See bug#2618271.
	* When declaring '%token <EIFFEL_TYPE> ...', the generated parser
	  expects to find token values in the variable `last_<eiffel_type>_value',
	  where all non-alphanumeric characters in the type name EIFFEL_TYPE
	  are replaced by underscores. It is now possible to customize the
	  name of this variable to `last_<alias_name>_value' by declaring
	  '%token <EIFFEL_TYPE as alias_name> ...'. See bug#2621302.

	Gobo Eiffel Kernel Library:

	* Added features `same_*_pathnames' to class KI_FILE_SYSTEM.
	* Features `test' in class KL_EQUALITY_TESTER and `equal_objects' in
	  class KL_ANY_ROUTINES now use the new ECMA construct '~' instead
	  of the combination `same_type' and then `is_equal'.

	Gobo Eiffel Lexical Library:

	* Fixed bug in LX_DFA_REGULAR_EXPRESSION where `compile ("foo\$")' was
	  setting `has_dollar' to True even though the dollar sign was escaped.

	* Added features `pattern' and `is_case_insensitive' in class LX_PATTERN_MATCHER.
