@@ -4,7 +4,7 @@
 		"C functions used to access garbage collector facilities"
 
 	system: "Gobo Eiffel Compiler"
-	copyright: "Copyright (c) 2007-2008, Eric Bezault and others"
+	copyright: "Copyright (c) 2007-2010, Eric Bezault and others"
 	license: "MIT License"
 	date: "$Date$"
 	revision: "$Revision$"
@@ -12,6 +12,25 @@
 
 #ifndef GE_GC_C
 #define GE_GC_C
+
+/*
+ * Allocate more memory for the given pointer.
+ * The reallocated pointer keeps the same properties (e.g. atomic or not, collectable or not).
+ * The extra allocated memory is zeroed.
+ * The allocated object is itself collectable.
+ */
+void* GE_recalloc(void* p, size_t old_nelem, size_t new_nelem, size_t elsize) {
+	void* new_p;
+#ifdef EIF_BOEHM_GC
+	new_p = GE_null(GC_REALLOC(p, new_nelem * elsize));
+#else /* No GC */
+	new_p = GE_null(realloc(p, new_nelem * elsize));
+#endif
+	memset(((char*) new_p) + (old_nelem * elsize), 0, (new_nelem - old_nelem) * elsize);
+	return new_p;
+}
+
+
 
 #ifdef EIF_BOEHM_GC
 /*
