@@ -14,7 +14,6 @@
 #define GE_GC_H
 
 #ifdef EIF_BOEHM_GC
-
 /*
 	Use the Boehm garbage collector.
 	See:
@@ -24,60 +23,19 @@
 
 #define GC_IGNORE_WARN
 #include "gc.h"
+#endif
+
 
 /*
 	GC initialization.
 */
+
+#ifdef EIF_BOEHM_GC
 #define GE_init_gc() GC_INIT(); GC_enable_incremental()
-
-/*
-	Memory allocation.
-*/
-
-/*
- * GE_alloc allocates memory that can contain pointers to collectable objects.
- */
-#define GE_alloc(x) GE_null(GC_MALLOC(x))
-
-/*
- * When defined, GE_alloc_cleared means that GE_alloc makes sure that the allocated memory is zeroed.
- */
-#define GE_alloc_cleared
-
-/*
- * GE_alloc_atomic allocates memory that does not contain pointers to collectable objects.
- */
-#define GE_alloc_atomic(x) GE_null(GC_MALLOC_ATOMIC(x))
-
-/*
- * When defined, GE_alloc_atomic_cleared means that GE_alloc_atomic makes sure that the allocated memory is zeroed.
- */
-/* #define GE_alloc_atomic_cleared */
-
-/*
-	Dispose
-*/
-
-/*
- * Call dispose routine `disp' on object `C'.
- */
-extern void GE_boehm_dispose(void*, void*);
-
-/*
- * Register dispose routine `disp' to be called on object `obj' when it will be collected.
- */
-#define GE_register_dispose(obj, disp) GC_REGISTER_FINALIZER((void*)(obj), (void (*) (void*, void*)) &GE_boehm_dispose, NULL, NULL, NULL)
-
-#else
-
-/*
-	No garbage collector.
-*/
-
-/*
-	GC initialization.
-*/
+#else /* No GC */
 #define GE_init_gc() /* do nothing */
+#endif
+
 
 /*
 	Memory allocation.
@@ -86,22 +44,174 @@ extern void GE_boehm_dispose(void*, void*);
 /*
  * GE_alloc allocates memory that can contain pointers to collectable objects.
  */
+#ifdef EIF_BOEHM_GC
+#define GE_alloc(x) GE_null(GC_MALLOC(x))
+#else /* No GC */
 #define GE_alloc(x) GE_null(malloc(x))
+#endif
 
 /*
  * When defined, GE_alloc_cleared means that GE_alloc makes sure that the allocated memory is zeroed.
  */
-/* #define GE_alloc_cleared */
+#ifdef EIF_BOEHM_GC
+#define GE_alloc_cleared
+#else /* No GC */
+#endif
 
 /*
  * GE_alloc_atomic allocates memory that does not contain pointers to collectable objects.
  */
+#ifdef EIF_BOEHM_GC
+#define GE_alloc_atomic(x) GE_null(GC_MALLOC_ATOMIC(x))
+#else /* No GC */
 #define GE_alloc_atomic(x) GE_null(malloc(x))
+#endif
 
 /*
  * When defined, GE_alloc_atomic_cleared means that GE_alloc_atomic makes sure that the allocated memory is zeroed.
  */
 /* #define GE_alloc_atomic_cleared */
+
+
+
+
+
+
+/*
+ * Allocate memory that can contain pointers to collectable objects.
+ * The allocated memory is not necessarily zeroed.
+ * The allocated object is itself collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_malloc(size) GE_null(GC_MALLOC(size))
+#else /* No GC */
+#define GE_malloc(size) GE_null(malloc(size))
+#endif
+
+/*
+ * Allocate memory that does not contain pointers to collectable objects.
+ * The allocated memory is not necessarily zeroed.
+ * The allocated object is itself collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_malloc_atomic(size) GE_null(GC_MALLOC_ATOMIC(size))
+#else /* No GC */
+#define GE_malloc_atomic(size) GE_null(malloc(size))
+#endif
+
+/*
+ * Allocate memory that can contain pointers to collectable objects.
+ * The allocated memory is zeroed.
+ * The allocated object is itself collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_calloc(nelem, elsize) GE_null(GC_MALLOC((nelem) * (elsize)))
+#else /* No GC */
+#define GE_calloc(nelem, elsize) GE_null(calloc((nelem), (elsize)))
+#endif
+
+/*
+ * Allocate memory that does not contain pointers to collectable objects.
+ * The allocated memory is zeroed.
+ * The allocated object is itself collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_calloc_atomic(nelem, elsize) memset(GE_null(GC_MALLOC_ATOMIC((nelem) * (elsize))), 0, (nelem) * (elsize))
+#else /* No GC */
+#define GE_calloc(nelem, elsize) GE_null(calloc((nelem), (elsize)))
+#endif
+
+/*
+ * Allocate memory that can contain pointers to collectable objects.
+ * The allocated memory is not necessarily zeroed.
+ * The allocated object is itself not collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_malloc_uncollectable(size) GE_null(GC_MALLOC_UNCOLLECTABLE(size))
+#else /* No GC */
+#define GE_malloc_uncollectable(size) GE_null(malloc(size))
+#endif
+
+/*
+ * Allocate memory that does not contain pointers to collectable objects.
+ * The allocated memory is not necessarily zeroed.
+ * The allocated object is itself not collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_malloc_atomic_uncollectable(size) GE_null(GC_malloc_atomic_uncollectable(size))
+#else /* No GC */
+#define GE_malloc_uncollectable(size) GE_null(malloc(size))
+#endif
+
+/*
+ * Allocate memory that can contain pointers to collectable objects.
+ * The allocated memory is zeroed.
+ * The allocated object is itself not collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_calloc_uncollectable(nelem, elsize) GE_null(GC_MALLOC_UNCOLLECTABLE((nelem) * (elsize)))
+#else /* No GC */
+#define GE_calloc_uncollectable(nelem, elsize) GE_null(calloc((nelem), (elsize)))
+#endif
+
+/*
+ * Allocate memory that does not contain pointers to collectable objects.
+ * The allocated memory is zeroed.
+ * The allocated object is itself not collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_calloc_atomic_uncollectable(nelem, elsize) memset(GE_null(GC_malloc_atomic_uncollectable((nelem) * (elsize))), 0, (nelem) * (elsize))
+#else /* No GC */
+#define GE_calloc_atomic_uncollectable(nelem, elsize) GE_null(calloc((nelem), (elsize)))
+#endif
+
+/*
+ * Allocate more memory for the given pointer.
+ * The reallocated pointer keeps the same properties (e.g. atomic or not, collectable or not).
+ * The extra allocated memory is not necessarily zeroed.
+ * The allocated object is itself collectable.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_realloc(p, size) GE_null(GC_REALLOC((p), (size)))
+#else /* No GC */
+#define GE_realloc(p, size) GE_null(realloc((p), (size)))
+#endif
+
+/*
+ * Allocate more memory for the given pointer.
+ * The reallocated pointer keeps the same properties (e.g. atomic or not, collectable or not).
+ * The extra allocated memory is zeroed.
+ * The allocated object is itself collectable.
+ */
+extern void* GE_recalloc(void* p, size_t old_nelem, size_t new_nelem, size_t elsize);
+
+/*
+ * Explicitly deallocate an object.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_free(p) GC_FREE(p)
+#else /* No GC */
+#define GE_free(p) free(p)
+#endif
+
+/*
+ * When defined, GE_malloc_cleared means that GE_malloc and GE_malloc_uncollectable
+ * make sure that the allocated memory is zeroed.
+ */
+#ifdef EIF_BOEHM_GC
+#define GE_malloc_cleared
+#else /* No GC */
+#endif
+
+/*
+ * When defined, GE_malloc_atomic_cleared means that GE_malloc_atomic and
+ * GE_malloc_atomic_uncollectable make sure that the allocated memory is zeroed.
+ */
+#ifdef EIF_BOEHM_GC
+/* #define GE_malloc_atomic_cleared */
+#else /* No GC */
+#endif
+
 
 /*
 	Dispose
@@ -110,8 +220,11 @@ extern void GE_boehm_dispose(void*, void*);
 /*
  * Register dispose routine `disp' to be called on object `obj' when it will be collected.
  */
+#ifdef EIF_BOEHM_GC
+extern void GE_boehm_dispose(void* C, void* disp); /* Call dispose routine `disp' on object `C'. */
+#define GE_register_dispose(obj, disp) GC_REGISTER_FINALIZER((void*)(obj), (void (*) (void*, void*)) &GE_boehm_dispose, NULL, NULL, NULL)
+#else /* No GC */
 #define GE_register_dispose(obj, disp) /* do nothing */
-
 #endif
 
 
