@@ -4,7 +4,7 @@
 		"C functions used to implement class IDENTIFIED"
 
 	system: "Gobo Eiffel Compiler"
-	copyright: "Copyright (c) 2007, Eric Bezault and others"
+	copyright: "Copyright (c) 2007-2010, Eric Bezault and others"
 	license: "MIT License"
 	date: "$Date$"
 	revision: "$Revision$"
@@ -18,24 +18,194 @@ extern "C" {
 #endif
 
 /*
-	Get a new id for `object', assuming it is NOT in the stack.
+	Weak pointers.
 */
-EIF_INTEGER GE_object_id(EIF_OBJECT object) {
-	return (EIF_INTEGER)object;
+
+/*
+ * Weak pointer structure.
+ */
+typedef struct GE_weak_pointer {
+	EIF_REFERENCE object;
+} GE_weak_pointer;
+
+/*
+ * Create a new weak pointer to `object'.
+ */
+GE_weak_pointer* GE_new_weak_pointer(EIF_REFERENCE object) {
+	GE_weak_pointer* wp;
+
+	if (object == 0) {
+		return (GE_weak_pointer*) 0;
+	} else {
+		wp = (GE_weak_pointer*) GE_malloc_atomic(sizeof(GE_weak_pointer));
+		wp->object = object;
+#ifdef EIF_BOEHM_GC
+		GC_GENERAL_REGISTER_DISAPPEARING_LINK(&wp->object, GC_base(object));
+#endif
+		return wp;
+	}
 }
 
 /*
-	Return the object associated with `id'.
-*/
-EIF_REFERENCE GE_id_object(EIF_INTEGER id) {
-	return (EIF_REFERENCE)id;
+ * Direct access to the object held in the weak pointer.
+ */
+EIF_REFERENCE GE_weak_pointer_object_without_lock(GE_weak_pointer* wp) {
+	if (wp == 0) {
+		return (EIF_REFERENCE) 0;
+	} else {
+		return (wp->object);
+	}
 }
 
 /*
-	Remove the object associated with `id' from the stack.
+ * Access to the object held in the weak pointer.
+ */
+#ifdef EIF_BOEHM_GC
+EIF_REFERENCE GE_weak_pointer_object(GE_weak_pointer* wp) {
+	return (EIF_REFERENCE) GC_call_with_alloc_lock(GE_weak_pointer_object_without_lock, wp);
+}
+#else /* No GC */
+#define GE_weak_pointer_object(wp) GE_weak_pointer_object_without_lock(wp)
+#endif
+
+
+/*
+	Identified data structures and functions.
 */
-void GE_object_id_free(EIF_INTEGER id) {
-	/* Do nothing */
+
+/*
+ * Size of inner arrays in `GE_id_objects'.
+ */
+#define GE_ID_OBJECT_CHUNK_SIZE 512
+
+/*
+ * Number of slots to be added to the outer array of
+ * `GE_id_objects' when resizing it.
+ */
+#define GE_ID_OBJECT_CAPACITY_INCREMENT 512
+
+/*
+ * Array of arrays of weak pointers. Each inner array has the same size
+ * (GE_ID_OBJECT_CHUNK_SIZE). Given an id, the weak pointer associated
+ * the object, if any, is at index (id % GE_ID_OBJECT_CHUNK_SIZE) in the
+ * inner array located at index (id / GE_ID_OBJECT_CHUNK_SIZE) in the
+ * outer array.
+ */
+GE_weak_pointer*** GE_id_objects;
+
+/*
+ * Capacity of the outer array of `GE_id_objects'.
+ */
+EIF_INTEGER_32 GE_id_objects_capacity;
+
+/*
+ * Last id associated with an object.
+ */
+EIF_INTEGER_32 GE_last_object_id;
+
+/*
+ * Initialize data to keep track of object ids.
+ */
+void GE_init_identified(void) {
+	GE_id_objects = (GE_weak_pointer***) 0;
+	GE_id_objects_capacity = 0;
+	GE_last_object_id = 0;
+}
+
+/*
+ * Get a new id for `object', assuming it is NOT in the stack.
+ */
+EIF_INTEGER_32 GE_object_id(EIF_OBJECT object) {
+	GE_weak_pointer** id_object_chunk;
+	EIF_INTEGER_32 i;
+	EIF_INTEGER_32 l_old_capacity;
+
+	GE_last_object_id++;
+	i = GE_last_object_id / GE_ID_OBJECT_CHUNK_SIZE;
+	if (i >= GE_id_objects_capacity) {
+		l_old_capacity = GE_id_objects_capacity;
+		GE_id_objects_capacity = GE_id_objects_capacity + GE_ID_OBJECT_CAPACITY_INCREMENT;
+		if (GE_id_objects == 0) {
+			GE_id_objects = GE_calloc_atomic_uncollectable(GE_id_objects_capacity, sizeof(GE_weak_pointer**));
+		} else {
+			GE_id_objects = GE_recalloc(GE_id_objects, l_old_capacity, GE_id_objects_capacity, sizeof(GE_weak_pointer**));
+		}
+	}
+	id_object_chunk = GE_id_objects[i];
+	if (id_object_chunk == 0) {
+		id_object_chunk = GE_calloc_uncollectable(GE_ID_OBJECT_CHUNK_SIZE, sizeof(GE_weak_pointer*));
+		GE_id_objects[i] = id_object_chunk;
+	}
+	i = GE_last_object_id % GE_ID_OBJECT_CHUNK_SIZE;
+	id_object_chunk[i] = GE_new_weak_pointer(object);
+	return GE_last_object_id;
+}
+
+/*
+ * Return the object associated with `id'.
+ */
+EIF_REFERENCE GE_id_object(EIF_INTEGER_32 id) {
+	GE_weak_pointer** id_object_chunk;
+	GE_weak_pointer* wp;
+	EIF_REFERENCE object;
+	EIF_INTEGER_32 i;
+
+	i = id / GE_ID_OBJECT_CHUNK_SIZE;
+	if (i >= GE_id_objects_capacity) {
+		return (EIF_REFERENCE) 0;
+	} else {
+		id_object_chunk = GE_id_objects[i];
+		if (id_object_chunk == 0) {
+			return (EIF_REFERENCE) 0;
+		} else {
+			i = id % GE_ID_OBJECT_CHUNK_SIZE;
+			wp = id_object_chunk[i];
+			if (wp == 0) {
+				return (EIF_REFERENCE) 0;
+			} else {
+				object = GE_weak_pointer_object(wp);
+				if (object == 0) {
+					id_object_chunk[i] = (GE_weak_pointer*) 0;
+#ifdef EIF_BOEHM_GC
+					GC_unregister_disappearing_link(&wp->object);
+#endif
+					GE_free(wp);
+					return (EIF_REFERENCE) 0;
+				} else {
+					return object;
+				}
+			}
+		}
+	}
+}
+
+/*
+ * Remove the object associated with `id' from the stack.
+ */
+void GE_object_id_free(EIF_INTEGER_32 id) {
+	GE_weak_pointer** id_object_chunk;
+	GE_weak_pointer* wp;
+	EIF_REFERENCE object;
+	EIF_INTEGER_32 i;
+
+	i = id / GE_ID_OBJECT_CHUNK_SIZE;
+	if (i < GE_id_objects_capacity) {
+		id_object_chunk = GE_id_objects[i];
+		if (id_object_chunk != 0) {
+			i = id % GE_ID_OBJECT_CHUNK_SIZE;
+			wp = id_object_chunk[i];
+			if (wp != 0) {
+				object = GE_weak_pointer_object(wp);
+				if (object != 0) {
+#ifdef EIF_BOEHM_GC
+					GC_unregister_disappearing_link(&wp->object);
+#endif
+				}
+				id_object_chunk[i] = (GE_weak_pointer*) 0;
+				GE_free(wp);
+			}
+		}
+	}
 }
 
 #ifdef __cplusplus
